# libimobiledevice-rust

./: .gitignore
libimobiledevice-sys/: Cargo.toml  build.rs
libimobiledevice-sys/src/: afc.rs  diagnostics_relay.rs  idevice.rs  lib.rs  lockdown.rs
libplist/: Cargo.toml
libplist-sys/: Cargo.toml  build.rs
libplist-sys/src/: lib.rs
libplist/src/: c_str.rs  error.rs  internal.rs  lib.rs  native.rs  node.rs  plist.rs  plist_rs.rs
libusbmuxd-sys/: Cargo.toml  build.rs
libusbmuxd-sys/src/: lib.rs  proto.rs
