[package]
name = "libimobiledevice-sys"
authors = ["kennytm <kennytm@gmail.com>"]
keywords = ["libimobiledevice", "usbmux", "iphone", "ios"]
repository = "https://github.com/kennytm/libimobiledevice-rust"
documentation = "http://kennytm.github.io/libimobiledevice-rust/"
license = "LGPL-2.1"
version = "1.2.0-alpha.1"

description = """
Native bindings to libimobiledevice.

libimobiledevice is cross-platform software protocol library and tools to
communicate with iOS® devices natively.
"""

build = "build.rs"

[dependencies]
libplist-sys = { version = "1.12.0", path = "../libplist-sys" }

[build-dependencies]
pkg-config = "0.3.8"

