[package]
name = "libplist-sys"
authors = ["kennytm <kennytm@gmail.com>"]
keywords = ["libplist", "plist", "libimobiledevice"]
repository = "https://github.com/kennytm/libimobiledevice-rust"
documentation = "http://kennytm.github.io/libimobiledevice-rust/"
license = "LGPL-2.1"
version = "1.12.0"

description = """
Native bindings to libplist.

libplist is a library to handle Apple Property List format in binary or XML.
This library exists only to support libimobiledevice. Consider using other
crates for reading and writing property list files.
"""

build = "build.rs"

[build-dependencies]
pkg-config = "0.3.8"

